Fix sample result metadata performance